Fixed layout problem with products_carousel in Product page

--- a/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
+++ b/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
@@ -4,43 +4,48 @@
     position: relative;
     width: 100%;
     padding-bottom: 32px;
-    // background-color: rgba(red, 0.2);
 
-    .carousel_controls {
-        @include within_breakpoint($extra_small_breakpoint) {
-            display: none;
-        }
-
-        button {
-            background: none;
-        }
-    }
-
-    .slide_container {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        padding: 64px;
-        justify-content: center;
-
-        @include within_breakpoint($extra_small_breakpoint) {
-            padding: unset;
-        }
-        
-        .product_image {            
-            width: 100%;
-            height: auto;
-            object-fit: contain;
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-    }
-
-    .dot_controls {
+    .carousel_provider_container {
         position: absolute;
-        bottom: 32px;
-        left: 50%;
-        transform: translate(-50%, 0px);
+        width: 100%;
+        height: 100%;
+
+        .carousel_controls {
+            @include within_breakpoint($extra_small_breakpoint) {
+                display: none;
+            }
+
+            button {
+                background: none;
+            }
+        }
+
+        .slide_container {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            padding: 64px;
+            justify-content: center;
+
+            @include within_breakpoint($extra_small_breakpoint) {
+                padding: unset;
+            }
+            
+            .product_image {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                background-size: contain;
+                background-repeat: no-repeat;
+            }
+        }
+
+        .dot_controls {
+            position: absolute;
+            bottom: 32px;
+            left: 50%;
+            transform: translate(-50%, 0px);
+        }
     }
 }
